# illume

./: README.md
server/: .gitignore  Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1bae111890c6_modify_repo_number.py  1c993ad52c53_modify_embedding_model_again.py  1e2786bb143a_init.py  2ffeeb4ce948_add_more_cascade_on_delete.py  3d6ee06b4ec6_add_auth.py  570a9dabb547_add_more_unique_constraints.py  650508da1616_update_brief_type.py  6a7706111825_add_cascade_deletes.py  8cffbb1cf735_add_cascade_on_delete.py  8d8c3934e9f4_remove_health_and_other_things.py  95fdf3002015_initial_schema.py  aff92caa271e_modify_and_add_more_schemas.py  b90f023a9981_modify_embedding_model.py  e5f221c31fc2_add_unique_constraints.py  e8dffd71f0da_add_git_last_modified_to_files.py  ec40440330d3_create_project_schemas.py
server/app/: main.py  test.py
server/app/api/: deps.py
server/app/api/v1/: auth.py  chat.py  glossary.py  graph.py  ws.py  (+5 more)
server/app/core/: celery.py  config.py  database.py  redis.py  security.py
server/app/db/: session.py
server/app/middleware/: auth.py
server/app/models/: __init__.py  ast_symbol.py  code_owner.py  commit.py  dependency.py  embedding.py  file.py  glossary_entry.py  health_metric.py  onboarding_guide.py  pull_request.py  repository.py  user.py
server/app/scripts/: clean.py
server/app/services/: brief_generator.py  embedder.py  git_analyzer.py  github_client.py  glossary_builder.py  graph_builder.py  health_scorer.py  ingestion.py  parser.py  rag.py  reading_order.py  summarizer.py
server/app/tasks/: ingest.py
(+82 files in other folders)
